--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div id="lead-content">
             <h1>R Sai Krishna</h1>
             <p style="color:white; letter-spacing :1px; font-size:30px">Competitive Programmer | Software Developer</p>
-            <a href="#" class="btn-rounded-white">Resume</a>
+            <a href="https://drive.google.com/file/d/1rtivkC8hBNLuN_8WaLdJSYxE5YBYTtZE/view?usp=sharing" class="btn-rounded-white">Resume</a>
         </div>
         <!-- End #lead-content -->
 
